--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body{
     color: #f0f0f0;
     text-shadow: 0 1px 4px cyan;
     font-family: 'Sawarabi Mincho', sans-serif;
-    background: url(bg.png);
     background-attachment: fixed;
     background-size: cover;
 }
@@ -13,16 +12,26 @@ header{
     top: 0;
     left: 0;
     width: 100%;
-    padding: 15px;
-    text-align: center;
+    padding: 15px 0 5px 0;
+    text-align: left;
+    box-shadow:inset 0 0 100px 100px rgba(0,0,0,.5);
 }
-header img{
+#header-title{
     height: 50px;
 }
-header span img{
+#header-title-sub{
     height: 30px;
     vertical-align: super;
 }
+#header-menu{
+    display: inline;
+    max-height: 50px;
+    overflow: hidden;
+}
+#header-menu img{
+    max-width: calc(30% - 100px);
+}
+
 #to-top{
     cursor: pointer;
     font-size: 30px;
@@ -35,6 +44,10 @@ header span img{
 section{
     text-align: center;
     padding-top: 55px;
+}
+section h2{
+    margin: 0;
+    padding-top: 40px;
 }
 #scroll{
     position: fixed;
@@ -66,6 +79,7 @@ section{
     border: 4px solid #e0e0e0;
     border-radius: 6px;
     color: #f0f0f0;
+    background: #202020;
     text-decoration: none;
     text-align: center;
     box-sizing: border-box;
@@ -73,7 +87,7 @@ section{
     font-size: 40px;
     margin: 30px;
     box-shadow: inset 0 0 0 6px #707070;
-    transform: rotate(5deg);
+    transform: rotate(3deg);
     transition: .2s all ease;
 }
 .link:hover{
@@ -85,6 +99,73 @@ section{
 .imgbutton{
     cursor: pointer;
     width: 400px;
-    margin: 4% 0;
+    margin: 3% 0;
     max-width: 80%;
+}
+
+#home-anim{
+    position: fixed;
+    height: 100%;
+    z-index: -2;
+}
+
+#home {
+  position: fixed;
+  clip-path: url(#cache);
+}
+
+#red {
+  fill: none;
+  opacity: 0;
+  stroke: white;
+  stroke-width: 12;
+  stroke-miterlimit:10;
+  animation: show 4s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out; 
+}
+
+#blue {
+  fill: none;
+  opacity: 0;
+  stroke: #06A1C4;
+  stroke-width: 12;
+  stroke-miterlimit:10;
+  animation: show 4s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+#light-blue {
+  fill: none;
+  opacity: 0.5;
+  stroke: #06A1C4;
+  stroke-width: 6;
+  stroke-miterlimit:10;
+  stroke-dasharray: 200;
+  stroke-dashoffset: 800;
+  animation: draw 4s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;    
+}
+
+@keyframes draw {
+  to {
+    stroke-dashoffset: 0;
+ }
+    }
+
+@keyframes show {
+  0% {
+    opacity: 0.15;
+ }
+  50% {
+    opacity: 0.2;
+ }
+  100% {
+    opacity: 0.15;
+ }
 }
