--- a/style.css
+++ b/style.css
@@ -12,9 +12,27 @@ header{
     top: 0;
     left: 0;
     width: 100%;
-    padding: 15px 0 5px 0;
+    padding: 15px 10px 5px 10px;
     text-align: left;
-    box-shadow:inset 0 0 100px 100px rgba(0,0,0,.5);
+    box-sizing: border-box;
+    box-shadow:inset 0 0 100px 100px rgba(0,0,0,.5), 0 0 8px 0 rgba(32, 245, 245, .5);
+    max-height: 80px;
+    overflow: hidden;
+}
+#header-tweet{
+    float: right;
+    margin: 5px 10px;
+    text-decoration: none;
+    color: #fff;
+    border: 2px solid #fff;
+    padding: 6px;
+    font-size: 15px;
+    border-radius: 5px;
+    opacity: 0.8;
+    box-shadow: 0 1px 4px 0 cyan;
+}
+#header-tweet:hover{
+    opacity: 1;
 }
 #header-title{
     height: 50px;
@@ -47,7 +65,7 @@ section{
 }
 section h2{
     margin: 0;
-    padding-top: 40px;
+    padding-top: 60px;
 }
 #scroll{
     position: fixed;
@@ -62,13 +80,13 @@ section h2{
     cursor: pointer;
 }
 #title-text{
-    width: 200px;
-    padding: 40px calc(50% - 100px);
-    text-align: left;
-    line-height: 40px;
-    letter-spacing: 10px;
-    writing-mode: vertical-rl;
+    padding-top: 50px;
+    text-align: center;
 }
+#title-text img{
+    width: 180px;
+}
+
 #links-box{
     text-align: center;
     padding-top: 20px;
@@ -98,14 +116,15 @@ section h2{
 }
 .imgbutton{
     cursor: pointer;
-    width: 400px;
+    max-height: 60px;
     margin: 3% 0;
-    max-width: 80%;
+    max-width: 70%;
 }
 
 #home-anim{
     position: fixed;
-    height: 100%;
+    min-height: 100%;
+    min-width: 100%;
     z-index: -2;
 }
 
@@ -118,9 +137,9 @@ section h2{
   fill: none;
   opacity: 0;
   stroke: white;
-  stroke-width: 12;
+  stroke-width: 2;
   stroke-miterlimit:10;
-  animation: show 4s;
+  animation: show 5s;
   animation-fill-mode: forwards;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out; 
@@ -130,9 +149,9 @@ section h2{
   fill: none;
   opacity: 0;
   stroke: #06A1C4;
-  stroke-width: 12;
+  stroke-width: 2;
   stroke-miterlimit:10;
-  animation: show 4s;
+  animation: show 6s;
   animation-fill-mode: forwards;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
@@ -142,7 +161,7 @@ section h2{
   fill: none;
   opacity: 0.5;
   stroke: #06A1C4;
-  stroke-width: 6;
+  stroke-width: 2;
   stroke-miterlimit:10;
   stroke-dasharray: 200;
   stroke-dashoffset: 800;
@@ -160,12 +179,12 @@ section h2{
 
 @keyframes show {
   0% {
-    opacity: 0.15;
+    opacity: 0;
  }
   50% {
-    opacity: 0.2;
+    opacity: 0.4;
  }
   100% {
-    opacity: 0.15;
+    opacity: 0;
  }
 }
