--- a/style.css
+++ b/style.css
@@ -1,131 +1,136 @@
-body{
-    margin: 0;
-    background: #202020;
-    color: #f0f0f0;
-    text-shadow: 0 1px 4px cyan;
-    font-family: 'Sawarabi Mincho', sans-serif;
-    background-attachment: fixed;
-    background-size: cover;
-}
-header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 15px 10px 5px 10px;
-    text-align: left;
-    box-sizing: border-box;
-    box-shadow:inset 0 0 100px 100px rgba(0,0,0,.5), 0 0 8px 0 rgba(32, 245, 245, .5);
-    max-height: 80px;
-    overflow: hidden;
-}
-#header-tweet{
-    float: right;
-    margin: 5px 10px;
-    text-decoration: none;
-    color: #fff;
-    border: 2px solid #fff;
-    padding: 6px;
-    font-size: 15px;
-    border-radius: 5px;
-    opacity: 0.8;
-    box-shadow: 0 1px 4px 0 cyan;
-}
-#header-tweet:hover{
-    opacity: 1;
-}
-#header-title{
-    height: 50px;
-}
-#header-title-sub{
-    height: 30px;
-    vertical-align: super;
-}
-#header-menu{
-    display: inline;
-    max-height: 50px;
-    overflow: hidden;
-}
-#header-menu img{
-    max-width: calc(30% - 100px);
+html {
+  margin: 0;
+  background: #202020;
+  color: #f0f0f0;
+  text-shadow: 0 1px 4px cyan;
+  font-family: 'Sawarabi Mincho', sans-serif;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
-#to-top{
-    cursor: pointer;
-    font-size: 30px;
-}
-#to-top span{
-    vertical-align: middle;
-    font-size: 20px;
-    margin: 0 10px;
-}
-section{
-    text-align: center;
-    padding-top: 55px;
-}
-section h2{
-    margin: 0;
-    padding-top: 60px;
-}
-#scroll{
-    position: fixed;
-    background: transparent;
-    border-bottom: 2px solid #f0f0f0;
-    border-right: 2px solid #f0f0f0;
-    width: 60px;
-    height: 60px;
-    right: 30px;
-    bottom: 15px;
-    transform: scaleY(.7) rotate(45deg);
-    cursor: pointer;
-}
-#title-text{
-    padding-top: 50px;
-    text-align: center;
-}
-#title-text img{
-    width: 180px;
+nav {
+  border-bottom: 1px solid #f0f0f0;
+  font-family: 'Sawarabi Mincho', sans-serif;
+  position: fixed;
+  width: 100%;
+  background: rgba(30, 30, 30, .8);
+  box-shadow: 0 0 40px -10px cyan;
 }
 
-#links-box{
-    text-align: center;
-    padding-top: 20px;
-}
-.link{
-    width: 100px;
-    height: 150px;
-    border: 4px solid #e0e0e0;
-    border-radius: 6px;
-    color: #f0f0f0;
-    background: #202020;
-    text-decoration: none;
-    text-align: center;
-    box-sizing: border-box;
-    padding-top: 20px;
-    font-size: 40px;
-    margin: 30px;
-    box-shadow: inset 0 0 0 6px #707070;
-    transform: rotate(3deg);
-    transition: .2s all ease;
-}
-.link:hover{
-    transform: scale(1.1) rotate(0deg);
-}
-.link:active{
-    transform: scale(0.9) rotate(0deg);
-}
-.imgbutton{
-    cursor: pointer;
-    max-height: 60px;
-    margin: 3% 0;
-    max-width: 70%;
+nav .row img {
+  box-sizing: border-box;
+  height: 55px;
+  margin: 10px;
+  vertical-align: middle;
 }
 
-#home-anim{
-    position: fixed;
-    min-height: 100%;
-    min-width: 100%;
-    z-index: -2;
+nav .row .item {
+  font-size: 15px;
+  box-sizing: border-box;
+  padding: 9px 5px;
+  display: inline-block;
+  text-decoration: none;
+  color: #f0f0f0;
+  transition: .2s all ease-out;
+  border-radius: 2px;
+  box-shadow: -10px -10px 0 -10px transparent, 10px 10px 0 -10px transparent;
+}
+
+nav .row .item:hover {
+  box-shadow: 0px 0px 0 1px white, 0px 0px 0 1px white;
+}
+
+nav .row button {
+  padding: 0;
+  margin: 10px;
+  margin-top: 15px;
+  width: calc(100% - 20px);
+  box-sizing: border-box;
+}
+
+section {
+  padding-top: 88px;
+  font-family: 'Sawarabi Mincho', sans-serif;
+}
+
+/* title */
+
+section #title-copy {
+  padding: 20px;
+  text-align: center;
+}
+
+section #title-img {
+  max-height: 400px;
+  z-index: 1;
+}
+
+.scroll {
+  position: relative;
+  font-size: 1.3em;
+  margin-top: 20px;
+  left: -20px;
+  display: inline-block;
+  height: 100px;
+}
+
+.scroll:hover {
+  text-decoration: none;
+}
+
+.scroll:after {
+  content: '';
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  margin: auto;
+  top: 10px;
+  right: 0;
+  left: 0;
+  -webkit-animation: 3s arrow infinite ease;
+  animation: 3s arrow infinite ease;
+}
+
+.scroll:after {
+  border-right: 1px solid #f0f0f0;
+  border-bottom: 1px solid #f0f0f0;
+  -ms-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+/* overview */
+
+section #overview-text {
+  text-align: center;
+  color: #f0f0f0;
+}
+
+section #overview-text0 {
+  margin-top: 10px;
+  font-size: 15px;
+}
+
+section #overview-text1 {
+  line-height: 1.75;
+  font-size: 25px;
+}
+
+section #overview-text2 {
+  font-size: 15px;
+}
+
+section #overview-text .uk-slideshow {
+  margin-top: 30px;
+}
+
+/* bg */
+
+#home-anim {
+  position: fixed;
+  min-height: 100%;
+  min-width: 100%;
+  z-index: -2;
 }
 
 #home {
@@ -138,11 +143,11 @@ section h2{
   opacity: 0;
   stroke: white;
   stroke-width: 2;
-  stroke-miterlimit:10;
+  stroke-miterlimit: 10;
   animation: show 5s;
   animation-fill-mode: forwards;
   animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out; 
+  animation-timing-function: ease-in-out;
 }
 
 #blue {
@@ -150,7 +155,7 @@ section h2{
   opacity: 0;
   stroke: #06A1C4;
   stroke-width: 2;
-  stroke-miterlimit:10;
+  stroke-miterlimit: 10;
   animation: show 6s;
   animation-fill-mode: forwards;
   animation-iteration-count: infinite;
@@ -162,29 +167,38 @@ section h2{
   opacity: 0.5;
   stroke: #06A1C4;
   stroke-width: 2;
-  stroke-miterlimit:10;
+  stroke-miterlimit: 10;
   stroke-dasharray: 200;
   stroke-dashoffset: 800;
   animation: draw 4s;
   animation-fill-mode: forwards;
   animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;    
+  animation-timing-function: ease-in-out;
 }
 
 @keyframes draw {
   to {
     stroke-dashoffset: 0;
- }
-    }
+  }
+}
 
 @keyframes show {
   0% {
     opacity: 0;
- }
+  }
   50% {
     opacity: 0.4;
- }
+  }
   100% {
     opacity: 0;
- }
+  }
+}
+
+@keyframes arrow {
+  0%, 100% {
+    top: 10px;
+  }
+  50% {
+    top: 30px;
+  }
 }
