--- a/skeleton.css
+++ b/skeleton.css
@@ -403,16 +403,26 @@ there.
 
 
 /* Larger than mobile */
-@media (min-width: 400px) {}
+@media (min-width: 400px) {
+  #home-anim { transform: rotate(90deg) scale(3) }
+}
 
 /* Larger than phablet (also point when grid becomes active) */
-@media (min-width: 550px) {}
+@media (min-width: 550px) {
+  #home-anim { transform: rotate(90deg) scale(2) }
+}
 
 /* Larger than tablet */
-@media (min-width: 750px) {}
+@media (min-width: 750px) {
+  #home-anim { transform: rotate(90deg) scale(2) }
+}
 
 /* Larger than desktop */
-@media (min-width: 1000px) {}
+@media (min-width: 1000px) {
+  #home-anim { transform: rotate(0deg) scale(2) }
+}
 
 /* Larger than Desktop HD */
-@media (min-width: 1200px) {}
+@media (min-width: 1200px) {
+  #home-anim { transform: rotate(0deg) scale(2) }
+}
