--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ section {
   font-family: 'Sawarabi Mincho', sans-serif;
 }
 
+a {
+  text-shadow: none;
+}
+
 /* title */
 
 section #title-copy {
@@ -173,13 +177,11 @@ section #overview-text .uk-slideshow {
 }
 
 .music{
-  padding: 6px;
-  margin: 40px auto;
-  border-radius: 4px;
-  border: 3px solid #f0f0f0;
-  background: rgba(0,0,0,.4);
+  padding: 8px;
+  margin: 18px auto;
+  background: rgba(0,0,0,.6);
   max-width: 600px;
-  box-shadow: 0 0 12px -5px cyan, inset 0 0 12px -5px cyan;
+  box-shadow: 0 2px 10px 0 rgba(0,0,0,.7);
 }
 
 .music .music-info{
@@ -217,7 +219,7 @@ section #overview-text .uk-slideshow {
 
 .music-level{
   margin: 10px 0;
-  border-top: 1px solid #f0f0f0;
+  border-top: 1px solid rgba(255,255,255,.3);
   text-align: left;
   padding: 8px;
 }
@@ -227,12 +229,13 @@ section #overview-text .uk-slideshow {
   color: #f0f0f0;
   text-shadow: 0 1px 2px black;
   border: 3px solid #000000;
+  border-radius: 6px;
   display: inline-block;
   width: 50px;
   padding: 2px;
   font-size: 18px;
   text-align: center;
-  box-shadow: 0 5px 10px -4px cyan;
+  box-shadow: 0 2px 10px -2px cyan, inset 0 -1em 1px 0 rgba(0,0,0,.2);
 }
 
 .music .music-level a:hover{
@@ -260,6 +263,7 @@ section #overview-text .uk-slideshow {
   opacity: .5;
   filter: blur(2px);
   min-height: max-content;
+  max-height: 80%;
   max-width: unset;
   transition: 1s all ease;
 }
