遊び方ページを追加

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html {
   margin: 0;
   background: #303030;
   color: #f0f0f0;
-  text-shadow: 0 1px 4px rgba(0, 255, 255, 1.0), 0 1px 8px rgba(0, 255, 255, 0.5);
+  text-shadow: 0 1px 4px rgba(0, 255, 255, 0.5), 0 1px 10px rgba(0, 255, 255, 0.5);
   font-family: 'Sawarabi Mincho', sans-serif;
   background-attachment: fixed;
   background-size: cover;
@@ -16,6 +16,8 @@ nav {
   border-bottom: 1px solid #f0f0f0;
   font-family: 'Sawarabi Mincho', sans-serif;
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   background: rgba(30, 30, 30, .8);
   box-shadow: 0 0 40px -10px cyan;
@@ -83,6 +85,18 @@ section #title-copy {
 section #title-img {
   height: 350px;
   z-index: 1;
+}
+
+section .title-cut {
+  margin: 10px;
+  width: 300px;
+  max-width: calc( 100% - 20px );
+  box-shadow: 0 2px 10px 0 black;
+}
+
+section.title-whats {
+  max-width: 700px;
+  margin: 0 auto;
 }
 
 .scroll {
@@ -258,22 +272,68 @@ section #overview-text .uk-slideshow {
   background: rgb(255, 9, 144);
 }
 
+/* PLAY */
+
+.play-page {
+  text-align: center;
+  margin: 0 10px;
+}
+
+.play-page img {
+  width: 500px;
+  max-width: 100%;
+}
+
+.play-page td {
+  background: #f0f0f0;
+  color: #444444;
+  text-shadow: none;
+  font-size: 15px;
+  padding: 6px;
+}
+
+.play-page td img {
+  width: 100px;
+}
+
+.charcomment {
+  border: 1px solid #f0f0f0;
+  font-size: 16px;
+  text-align: left;
+  padding: 0;
+  border-radius: 5px;
+  padding: 5px;
+  background: rgba(0, 0, 0, .5);
+  overflow: hidden;
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.charcomment > img {
+  float: right;
+  height: 64px;
+  width: auto;
+  margin: -5px;
+}
+
+/* bgimg */
 
 #bgimg-1 {
   position: fixed;
-  left: 100%;
+  left: -100vh;
   bottom: 0;
   z-index: -1;
   opacity: .5;
   filter: blur(2px);
   min-height: max-content;
   max-height: 80%;
-  max-width: unset;
+  max-width: 100vh;
   transition: 1s all ease;
 }
 
 #bgimg-1.show {
   left: -20%;
+  max-width: unset;
 }
 
 /* bg */
