--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ nav .row img {
 nav .row .item {
   font-size: 15px;
   box-sizing: border-box;
-  padding: 9px 5px;
+  padding: 9px 2px;
   display: inline-block;
   text-decoration: none;
   color: #f0f0f0;
@@ -63,6 +63,24 @@ nav .row button {
   margin-top: 15px;
   width: calc(100% - 20px);
   box-sizing: border-box;
+}
+
+nav .row .nav-right {
+  font-size: 17px;
+  width: 40px;
+  height: 40px;
+  box-sizing: border-box;
+  text-align: center;
+  vertical-align: middle;
+  padding: 11px 0;
+  margin-top: 16px;
+  margin-right: 12px;
+  display: inline-block;
+  text-decoration: none;
+  background-color: #505050;
+  transition: .2s all ease-out;
+  border-radius: 999px;
+  color: #f0f0f0;
 }
 
 section {
@@ -327,7 +345,7 @@ section #overview-text .uk-slideshow {
   min-height: max-content;
   max-height: 80%;
   max-width: 100vh;
-  transition: 1s all ease;
+  transition: .6s all ease;
 }
 
 #bgimg-1.show {
