--- a/style.css
+++ b/style.css
@@ -15,79 +15,60 @@ html {
 nav {
   border-bottom: 1px solid #f0f0f0;
   font-family: 'Sawarabi Mincho', sans-serif;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background: rgba(30, 30, 30, .8);
   box-shadow: 0 0 40px -10px cyan;
-  z-index: 999;
   animation: 3s clight infinite ease;
+  background: #303030;
 }
 
-nav .row img {
-  box-sizing: border-box;
-  height: 55px;
-  margin: 10px;
-  vertical-align: middle;
+.uk-navbar-transparent {
+  padding: 30px 0;
 }
 
-nav .row .item {
-  font-size: 15px;
-  box-sizing: border-box;
-  padding: 9px 2px;
+.uk-navbar-transparent img {
+  height: 120px;
+}
+
+.uk-sticky-below img {
+  height: 64px;
+  margin-top: 6px;
+}
+
+.uk-navbar .logo-black,
+.uk-sticky .logo-white {
+  display: none;
+}
+
+.uk-navbar-transparent .logo-white {
   display: inline-block;
-  text-decoration: none;
-  color: #f0f0f0;
-  transition: .2s all ease-out;
-  border-radius: 2px;
-  box-shadow: -10px -10px 0 -10px transparent, 10px 10px 0 -10px transparent;
 }
 
-nav .row .item:hover {
-  box-shadow: 0px 0px 0 1px white, 0px 0px 0 1px white;
-}
-
-nav .row .item.active{
-  border-bottom: 2px solid #f0f0f0;
-  text-shadow: 0 1px 4px rgba(0, 255, 255, 1.0), 0 1px 8px rgba(0, 255, 255, 1), 0 1px 6px rgba(0, 255, 255, 1);
-}
-
-nav .row .item.active:hover{
-  box-shadow: none;
-}
-
-nav .row button {
-  padding: 0;
-  margin: 10px;
-  margin-top: 15px;
-  width: calc(100% - 20px);
-  box-sizing: border-box;
-}
-
-nav .row .nav-right {
-  font-size: 17px;
-  width: 40px;
-  height: 40px;
-  box-sizing: border-box;
-  text-align: center;
-  vertical-align: middle;
-  padding: 11px 0;
-  margin-top: 16px;
-  margin-right: 12px;
+.uk-sticky-below .logo-black {
   display: inline-block;
-  text-decoration: none;
-  background-color: #505050;
-  transition: .2s all ease-out;
-  border-radius: 999px;
-  color: #f0f0f0;
 }
 
 section {
   color: white;
   text-align: center;
-  padding-top: 98px;
+  padding: 20px 0;
   font-family: 'Sawarabi Mincho', sans-serif;
+}
+
+body .sticky-container {
+  background: rgba(0, 0, 0, .5);
+}
+
+body .sticky-container .uk-cover-container {
+  position: sticky;
+  top: 0px;
+  margin-top: -100px;
+  height: 100vh;
+  width: 100vw;
+  z-index: -1;
+}
+
+body .sticky-container section {
+  position: relative;
+  top: -85vh;
 }
 
 a {
@@ -105,15 +86,10 @@ section #title-img {
   z-index: 1;
 }
 
-section .title-cut {
-  margin: 10px;
-  max-height: calc( 100vh - 400px );
-  box-shadow: 0 2px 10px 0 black;
-}
-
-section.title-whats {
-  max-width: 700px;
-  margin: 0 auto;
+section .uk-heading-line{
+  color: #ffffff;
+  font-family: 'Sawarabi Mincho', sans-serif;
+  margin-top: 20px;
 }
 
 .scroll {
@@ -331,26 +307,6 @@ section #overview-text .uk-slideshow {
   height: 64px;
   width: auto;
   margin: -5px;
-}
-
-/* bgimg */
-
-#bgimg-1 {
-  position: fixed;
-  left: -100vh;
-  bottom: 0;
-  z-index: -1;
-  opacity: .5;
-  filter: blur(2px);
-  min-height: max-content;
-  max-height: 80%;
-  max-width: 100vh;
-  transition: .6s all ease;
-}
-
-#bgimg-1.show {
-  left: -20%;
-  max-width: unset;
 }
 
 /* bg */
